--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Dhruv Chheda is a web and app developer specializing in JavaScript, React, and React Native. He creates responsive, high-performance applications focused on user experience and cutting-edge technology. Explore his portfolio to see his work and projects." />
+    <meta name="description" content="Dhruv Chheda: Web and app developer skilled in JavaScript, React, and React Native. Creating responsive, high-performance applications. Explore his portfolio." />
     <meta name="keywords" content="Dhruv Chheda, web developer, app developer, JavaScript, React, React Native, portfolio, high-performance applications, responsive design" />
     <meta name="author" content="Dhruv Chheda" />
 
@@ -30,8 +30,27 @@
     <!-- Web Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="canonical" href="https://dhruvchheda.com/">
+
     <!-- Title -->
     <title>Dhruv Chheda - Web & App Developer</title>
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Dhruv Chheda",
+        "jobTitle": "Web and App Developer",
+        "url": "https://dhruvchheda.com",
+        "sameAs": "https://www.linkedin.com/in/dhruv-chheda-52637522a/",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+918097217836",
+          "contactType": "Personal"
+        }
+      }
+    </script>      
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
