--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Dhruv Chheda - Web & App Developer" />
     <meta property="og:description" content="Dhruv Chheda is a skilled web and app developer with expertise in JavaScript, React, and React Native. Visit his portfolio to see innovative and responsive applications." />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/dhruv-chheda.png" />
     <meta property="og:url" content="https://dhruvchheda.com" />
     <meta property="og:type" content="website" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Dhruv Chheda - Web & App Developer" />
     <meta name="twitter:description" content="Explore the portfolio of Dhruv Chheda, a web and app developer specializing in JavaScript, React, and React Native. See his work and projects." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/dhruv-chheda.png" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -43,17 +43,27 @@
         "name": "Dhruv Chheda",
         "jobTitle": "Web and App Developer",
         "url": "https://dhruvchheda.com",
-        "sameAs": "https://www.linkedin.com/in/dhruv-chheda-52637522a/",
+        "sameAs": [
+          "https://www.linkedin.com/in/dhruv-chheda-52637522a/",
+          "https://www.instagram.com/chheda.dhruv3/",
+          "https://x.com/ChhedaDhruv4",
+          "https://github.com/chhedadhruv"
+        ],
+        "image": "https://dhruvchheda.com/dhruv-chheda.png",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+918097217836",
           "contactType": "Personal"
         }
       }
-    </script>      
+    </script>    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1 style="display: none;">Dhruv Chheda</h1>
+      <h2 style="display: none;">Web and App Developer</h2>
+      <img src="%PUBLIC_URL%/dhruv-chheda.png" alt="Dhruv Chheda, Web and App Developer" style="display: none;" />
+    </div>
   </body>
 </html>
