--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Dhruv Chheda - Web & App Developer" />
     <meta property="og:description" content="Dhruv Chheda is a skilled web and app developer with expertise in JavaScript, React, and React Native. Visit his portfolio to see innovative and responsive applications." />
     <meta property="og:image" content="%PUBLIC_URL%/dhruv-chheda.png" />
-    <meta property="og:url" content="https://dhruvchheda.com" />
+    <meta property="og:url" content="https://www.dhruvchheda.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
@@ -30,7 +30,7 @@
     <!-- Web Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="canonical" href="https://dhruvchheda.com/">
+    <link rel="canonical" href="https://www.dhruvchheda.com/">
 
     <!-- Title -->
     <title>Dhruv Chheda - Web & App Developer</title>
@@ -42,7 +42,7 @@
         "@type": "Person",
         "name": "Dhruv Chheda",
         "jobTitle": "Web and App Developer",
-        "url": "https://dhruvchheda.com",
+        "url": "https://www.dhruvchheda.com",
         "sameAs": [
           "https://www.linkedin.com/in/dhruv-chheda-52637522a/",
           "https://www.instagram.com/chheda.dhruv3/",
