--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Dhruv Chheda - Web & App Developer" />
     <meta property="og:description" content="Dhruv Chheda is a skilled web and app developer with expertise in JavaScript, React, and React Native. Visit his portfolio to see innovative and responsive applications." />
-    <meta property="og:image" content="%PUBLIC_URL%/dhruv-chheda.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/dhruv-chheda.webp" />
     <meta property="og:url" content="https://www.dhruvchheda.com" />
     <meta property="og:type" content="website" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Dhruv Chheda - Web & App Developer" />
     <meta name="twitter:description" content="Explore the portfolio of Dhruv Chheda, a web and app developer specializing in JavaScript, React, and React Native. See his work and projects." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/dhruv-chheda.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/dhruv-chheda.webp" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -31,6 +31,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="canonical" href="https://www.dhruvchheda.com/">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Title -->
     <title>Dhruv Chheda - Web & App Developer</title>
@@ -49,7 +54,7 @@
           "https://x.com/ChhedaDhruv4",
           "https://github.com/chhedadhruv"
         ],
-        "image": "https://dhruvchheda.com/dhruv-chheda.png",
+        "image": "https://dhruvchheda.com/dhruv-chheda.webp",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+918097217836",
