--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
 
     <link rel="canonical" href="https://www.dhruvchheda.com/">
 
+    <!-- Preload LCP Image -->
+    <link rel="preload" href="%PUBLIC_URL%/dhruv-chheda.webp" as="image">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,14 +64,14 @@
           "contactType": "Personal"
         }
       }
-    </script>    
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <h1 style="display: none;">Dhruv Chheda</h1>
       <h2 style="display: none;">Web and App Developer</h2>
-      <img src="%PUBLIC_URL%/dhruv-chheda.png" alt="Dhruv Chheda, Web and App Developer" style="display: none;" />
+      <img src="%PUBLIC_URL%/dhruv-chheda.webp" alt="Dhruv Chheda, Web and App Developer" style="display: none;" />
     </div>
   </body>
 </html>
