--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,22 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Dhruv Chheda: Web and app developer skilled in JavaScript, React, and React Native. Creating responsive, high-performance applications. Explore his portfolio." />
-    <meta name="keywords" content="Dhruv Chheda, web developer, app developer, JavaScript, React, React Native, portfolio, high-performance applications, responsive design" />
+    <meta
+      name="description"
+      content="Dhruv Chheda: Web and app developer skilled in JavaScript, React, and React Native. Creating responsive, high-performance applications. Explore his portfolio."
+    />
+    <meta
+      name="keywords"
+      content="Dhruv Chheda, web developer, app developer, JavaScript, React, React Native, portfolio, high-performance applications, responsive design"
+    />
     <meta name="author" content="Dhruv Chheda" />
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Dhruv Chheda - Web & App Developer" />
-    <meta property="og:description" content="Dhruv Chheda is a skilled web and app developer with expertise in JavaScript, React, and React Native. Visit his portfolio to see innovative and responsive applications." />
+    <meta
+      property="og:description"
+      content="Dhruv Chheda is a skilled web and app developer with expertise in JavaScript, React, and React Native. Visit his portfolio to see innovative and responsive applications."
+    />
     <meta property="og:image" content="%PUBLIC_URL%/dhruv-chheda.webp" />
     <meta property="og:url" content="https://www.dhruvchheda.com" />
     <meta property="og:type" content="website" />
@@ -21,7 +30,10 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Dhruv Chheda - Web & App Developer" />
-    <meta name="twitter:description" content="Explore the portfolio of Dhruv Chheda, a web and app developer specializing in JavaScript, React, and React Native. See his work and projects." />
+    <meta
+      name="twitter:description"
+      content="Explore the portfolio of Dhruv Chheda, a web and app developer specializing in JavaScript, React, and React Native. See his work and projects."
+    />
     <meta name="twitter:image" content="%PUBLIC_URL%/dhruv-chheda.webp" />
 
     <!-- Favicon -->
@@ -30,15 +42,27 @@
     <!-- Web Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="canonical" href="https://www.dhruvchheda.com/">
+    <link rel="canonical" href="https://www.dhruvchheda.com/" />
 
     <!-- Preload LCP Image -->
-    <link rel="preload" href="%PUBLIC_URL%/dhruv-chheda.webp" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/dhruv-chheda.webp" as="image" />
+
+    <link rel="preload" href="%PUBLIC_URL%/dhruv-chheda.webp" as="image" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
 
     <!-- Title -->
     <title>Dhruv Chheda - Web & App Developer</title>
@@ -69,9 +93,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <h1 style="display: none;">Dhruv Chheda</h1>
-      <h2 style="display: none;">Web and App Developer</h2>
-      <img src="%PUBLIC_URL%/dhruv-chheda.webp" alt="Dhruv Chheda, Web and App Developer" style="display: none;" />
+      <h1 style="display: none">Dhruv Chheda</h1>
+      <h2 style="display: none">Web and App Developer</h2>
+      <img
+        src="%PUBLIC_URL%/dhruv-chheda.webp"
+        alt="Dhruv Chheda, Web and App Developer"
+        style="display: none"
+      />
     </div>
   </body>
 </html>
