--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <!-- Preload LCP Image -->
     <link rel="preload" href="%PUBLIC_URL%/dhruv-chheda.webp" as="image" />
 
-    <link rel="preload" href="%PUBLIC_URL%/profile.webp" as="image" />
+    <link rel="preload" href="https://robohash.org/1?set=set3" as="image" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
